--- a/style.css
+++ b/style.css
@@ -32,3 +32,26 @@
   right: 0;
   background-color: #fff;
 }
+
+/* Hero Header Section  */
+.bgimage {
+  width:100%;
+  height:500px;
+  background: url('images/pizza-hero.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
+}
+.bgimage h5, h1, h3 {
+  color:white;
+  text-shadow:2px 2px #333;
+  text-align: center;
+}
+.bgimage h1 {
+  font-size: 500%;
+}
+
+.pizza-button {
+  align-content: center;
+}
