--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 #ping-view {
   display: none;
 }
+#ping-view h1 {
+  color: #A9A9A9;
+}
 
 .profile-area img {
   max-width: 150px;
@@ -36,7 +39,7 @@
 /* Hero Header Section  */
 .bgimage {
   width:100%;
-  height:500px;
+  height:450px;
   background: url('images/pizza-hero.jpg');
   background-repeat: no-repeat;
   background-position: center;
@@ -55,3 +58,6 @@
 .pizza-button {
   align-content: center;
 }
+
+/* Order Pizza */
+.ping-view 
