--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   display: none;
 }
 #ping-view h1 {
-  color: #A9A9A9;
+  color: #6B6969;
 }
 
 .profile-area img {
@@ -60,4 +60,19 @@
 }
 
 /* Order Pizza */
-.ping-view 
+.btn-ping-private {
+  text-align: center;
+}
+
+.order-pizza {
+  background-color: #F6EEEE;
+}
+
+.content {
+  background-color: #F6EEEE;
+  contain: none;
+}
+
+#ping-view {
+  background-color: #F6EEEE;
+}
